# aqyra

./: .gitattributes  .gitignore  .gitmodules  BOCETO_inc-nucleo-elementos.md  Backlog_Fase0_operativo.xlsx  CIERRE-ALCANCE_P1-A-B-C.md  CLAUDE.md  CODEOWNERS  COMMIT_motor_reorg.bat  DECISIONES.md  ESTADO_V1.md  ESTRATEGIA_NEGOCIO.md  FASE0_git_init.bat  FIRMA_C1.ps1  GEMINI.md  GOBIERNO_instrucciones-proyecto-cowork.md  HILO-V2-DEV_continuidad.md  HILO-V2_primer-corte_estado.md  Hoja-de-ruta_Ecosistema-ingenieria.md  Hoja-de-ruta_Ola7-puentes-y-motor-FEM.md  Hoja-de-ruta_v2_Motor-calculo-estructural.md  INICIAR_DEMO_AQYRA.bat  INICIO-hilo_P1-A_geometria-edificacion.md  INICIO-hilo_P1-B_trazado-alineaciones.md  INICIO-hilo_P1-C_normativa-auditoria.md  INICIO-hilo_P1-georreferenciacion-emplazamiento.md  INICIO-hilo_P3-plataforma-tope-uso.md  INICIO-hilo_PT1.6_verificacion-ola1.md  INICIO-hilo_PT4.1_grafo-red-nucleo.md  INICIO-hilo_PT4.3_instalaciones-solver-red.md  INICIO-hilo_PT4.4_pci-rociadores-mallas-ifc.md  INICIO-hilo_PT4.5_electricas-rebt.md  INICIO-hilo_PT4.6_verificacion-ola4.md  INICIO-hilo_PT5.1_alignment-gis.md  INICIO-hilo_PT5.2_obras-lineales-trazado-firmes.md  INICIO-hilo_PT6.1_drenaje-hidrologia.md  INICIO-hilo_PT6.2_obras-hidraulicas-red.md  INICIO-hilo_PT6.3_abastecimiento-presion.md  INICIO-hilo_PT7.3.1_lector-estructural-IFC-y-10-casos.md  INICIO-hilo_PT7.3_subestructura.md  (+35 more)
.github/: pull_request_template.md
Casos-de-uso/: PROGRAMA-aprendizaje.md  REPOSITORIO-aprendizaje.md  _synctest.txt
Fase5-pilotes/: README.md
Fase7-mixtas/: README.md
Nucleo-transversal/: C1_Contrato-IFC-modelo-neutro.md  C2_Contrato-memoria-despacho.md  C3_Contrato-entregables-memoria.md  C5_Contrato-motor-FEM.md  CN-1_Convencion-memoria-despacho.md  CN-3_Convencion-acciones-bases-de-calculo.md  README.md  Verificacion-Ola1.md  Verificacion-Ola4.md  plantilla-memoria.md  verificar_espejo_nucleo.py
_historial/: CONTINUAR-en-nuevo-hilo.md  Estructurando2.0_Narracion-IFC_alcance-y-pendiente.md  HILO-1_benchmark_entorno.md  HILO-V1_brief_visor_industrializado.md  HILO-V1_dossier-decisiones-6-7.md  HILO-V1_plan-tecnico.md  HILO-V2_brief_preproceso.md  HILO-V2_evidencia-modelo-analitico.md  HILO-V3_para-firma_D-019-contrato-C5.md  HILO-V3_para-firma_D-020-uniones.md  INICIO-hilo_PT4.2_ifc-mep.md  INICIO-hilo_PT4.3_instalaciones-solver-red.md  INICIO-hilo_PT4.6_verificacion-ola4.md  INICIO-hilo_PT5.1_alignment-gis.md  INICIO-hilo_PT6.2_obras-hidraulicas-red.md  INICIO-hilo_PT7.2_grupo-lineal-losa-portico-celosia.md  INICIO-hilo_PT7.5_tableros-avanzados.md  INICIO-hilo_Visor-v0.7_navegacion-filtrado.md  INICIO-hilo_Visor-v0.9_clasificacion-BCF.md  (+8 more)
_import/aqyra-entorno/privado/qa-pynite/: pyproject.toml
_import/aqyra-entorno/privado/qa-pynite/src/aqyra_qa_pynite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_import/aqyra-entorno/privado/qa-pynite/src/qa_pynite/: __init__.py  qa.py  reconcile.py
_import/aqyra-entorno/privado/qa-pynite/tests/: test_qa.py
_import/aqyra-entorno/privado/servicio-calculo/: pyproject.toml
_import/aqyra-entorno/privado/servicio-calculo/src/servicio_calculo/: __main__.py  app.py
_import/aqyra-entorno/privado/servicio-calculo/tests/: test_service.py
_import/aqyra-entorno/privado/verificacion-ec/: README.md  pyproject.toml
_import/aqyra-entorno/privado/verificacion-ec/src/aqyra_verificacion_ec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_import/aqyra-entorno/privado/verificacion-ec/src/verificacion_ec/: __init__.py  ec3.py
_import/aqyra-entorno/privado/verificacion-ec/tests/: test_ec3.py
documentos/comun/: pyproject.toml
documentos/comun/src/aqyra_documento_comun/: __init__.py  formato.py
documentos/export/: DECISIONES.md  pyproject.toml
documentos/export/esquemas/: descriptor-export.schema.json  manifiesto-export.schema.json
documentos/export/src/aqyra_documento_export/: __init__.py  cli.py  export.py  firma.py  manifiesto.py  pliego_doc.py  presupuesto_doc.py  proyeccion.py  sellado.py
documentos/export/tests/: test_export.py
documentos/pliego/: DECISIONES.md  pyproject.toml
documentos/pliego/src/aqyra_documento_pliego/: __init__.py  cli.py  compositor.py  formato.py
documentos/pliego/tests/: test_compositor.py
documentos/presupuesto/: DECISIONES.md  pyproject.toml
documentos/presupuesto/src/aqyra_documento_presupuesto/: __init__.py  cli.py  compositor.py  formato.py
documentos/presupuesto/tests/: test_compositor.py
engines/bc3/: README.md  pyproject.toml
engines/bc3/src/aqyra_bc3/: __init__.py  bc3.py  cli.py
engines/bc3/tests/: test_bc3.py  test_emision.py
engines/cumplimiento/: README.md  pyproject.toml
engines/cumplimiento/src/aqyra_cumplimiento/: __init__.py  cli.py  cumplimiento.py  escritura.py  evaluadores.py  modelo.py
engines/cumplimiento/tests/: test_cumplimiento.py  test_escritura.py  test_evaluadores.py
engines/presupuesto/: DECISIONES.md  README.md  pyproject.toml
engines/presupuesto/src/aqyra_presupuesto/: __init__.py  cli.py  escritura.py  medicion.py  modelo.py  presupuesto.py  primitivas.py  proyeccion.py
engines/presupuesto/tests/: test_carbono.py  test_cortes.py  test_eje_multieje.py  test_escritura.py  test_medicion.py  test_presupuesto.py  test_proyeccion.py
privado/firma/: pyproject.toml
privado/firma/src/aqyra_firma.egg-info/: PKG-INFO
privado/firma/src/firma/: sign.py
privado/puente-calculo/: MOTOR_FEM_BINDING.md  pyproject.toml
privado/puente-calculo/src/aqyra_puente_calculo.egg-info/: top_level.txt
privado/puente-calculo/src/puente_calculo/: __init__.py  motor_request.py
privado/puente-calculo/tests/: test_adapter.py
qa/: README.md
services/entrega/: pyproject.toml
services/entrega/src/aqyra_entrega/: __init__.py  cli.py  entrega.py  manifiesto_entrega.py
services/entrega/tests/: test_entrega.py
services/federacion/: pyproject.toml
services/federacion/src/aqyra_federacion/: __init__.py  bcf.py  cli.py  derivar.py  federar.py  ids_min.py  lectura.py  qa.py
services/federacion/tests/: test_bcf.py  test_derivar.py  test_federacion.py  test_lectura.py
(+1569 files in other folders)
