[project]
name = "aqyra"
version = "0.0.0"
description = "Monorepo industrial de Aqyra (ACE / OpenBIM) — raíz del workspace uv."
requires-python = ">=3.10"

# La raíz NO es un paquete instalable: es el contenedor del workspace.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "packages/golden", "packages/packs", "services/federacion"]
# engines/* se añaden como miembros cuando aterricen (services/federacion aterrizó en Fase II·h2).

# Dependencias de desarrollo del workspace (uv las instala en `uv sync`).
[dependency-groups]
dev = ["pytest>=8"]
