[project]
name = "aqyra"
version = "0.0.0"
description = "Monorepo industrial de Aqyra (ACE / OpenBIM) — raíz del workspace uv."
requires-python = ">=3.10"

# La raíz NO es un paquete instalable: es el contenedor del workspace.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/core", "packages/golden", "packages/packs", "services/federacion", "engines/cumplimiento", "engines/presupuesto", "engines/bc3", "documentos/presupuesto", "documentos/pliego"]
# engines/* se añaden como miembros cuando aterricen (services/federacion aterrizó en Fase II·h2;
# engines/cumplimiento en Fase III·h3 y engines/presupuesto en Fase IV·h2 — engines C3/C5 versionados
# y releasables, D6; engines/bc3 en Ola 1·E0.1 — adaptador FIEBDC-3 texto puro, releaseable, sin
# ifcopenshell). engines/ifc sigue import-de-path (sin pyproject): se ancla por md5, no por
# versión de paquete.

# Dependencias de desarrollo del workspace (uv las instala en `uv sync`).
[dependency-groups]
dev = ["pytest>=8"]
