[project]
name = "aqyra-documento-comun"
version = "0.1.0"
description = "Capa de documentos — modulo COMPARTIDO del formato del despacho (A4/Arial 11, tablas 9,5 con cabecera azul repetida, caratula, cabecera/pie). Extraido al aparecer el 3.er consumidor (documentos/export), D-EX-1 opcion A. Hermetico (solo python-docx). Lo consume documentos/export; presupuesto/pliego siguen con su espejo congelado."
requires-python = ">=3.10"
dependencies = [
  "python-docx>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqyra_documento_comun"]
