[project]
name = "aqyra-documento-presupuesto"
version = "0.2.0"
description = "Capa de documentos C5 — compositor DETERMINISTA del Documento de Presupuesto: componer_documento(presupuesto, parametros?) → .docx del despacho (carátula + estado de mediciones con parciales de capítulo + cuadro de precios nº1 en letra + cuadro de precios nº2 descompuesto + resumen PEM→PEC). Consume el `salida-presupuesto` JSON (NO recalcula). Formato del despacho implementado in-repo (python-docx); el skill memoria-calculo-despacho es la especificación de referencia. Primer ladrillo de la capa de documentos que C7 orquestará (no es el operador C7)."
requires-python = ">=3.10"
dependencies = [
  "python-docx>=1.1",
]

[project.scripts]
aqyra-documento-presupuesto = "aqyra_documento_presupuesto.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqyra_documento_presupuesto"]
