[project]
name = "aqyra-firma"
version = "0.1.0"
description = "Firma de JM (2.a llave): unica fuente de verified-signed (D-021/D-023). Anzuelo (privado)."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
