[project]
name = "aqyra-federacion"
version = "0.2.0"
description = "Service C4 — federación: federar(ifcs[], reglas) → Maestro (manifiesto) · validar(maestro, ids) → informe QA · emitir_bcf(informe, carpeta) → topics BCF 3.0. Contract-first: reproduce las golden C4-FED-01 y C4-FED-02."
requires-python = ">=3.10"
dependencies = [
  "ifcopenshell>=0.7",
]

[project.scripts]
aqyra-federacion = "aqyra_federacion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqyra_federacion"]
