[project]
name = "aqyra-federacion"
version = "0.4.0"
description = "Service C4 — federación: federar(ifcs[], reglas) → Maestro (manifiesto; políticas de estructura espacial unificar-por-nombre y mantener-separada, D22) · validar(maestro, ids) → informe QA (con avisos_lectura para IFC sucio, tarea 1.3) · emitir_bcf(informe, carpeta) → topics BCF 3.0. Contract-first: reproduce las golden C4-FED-01/02/03/04/05."
requires-python = ">=3.10"
dependencies = [
  "ifcopenshell>=0.7",
]

[project.scripts]
aqyra-federacion = "aqyra_federacion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqyra_federacion"]
