[project]
name = "aqyra-federacion"
version = "0.5.0"
description = "Service C4 — federación: federar(ifcs[], reglas) → Maestro (manifiesto) · derivar(maestro, base_dir, salida) → IFC federado DERIVADO anclable por md5 (D26/D27) · validar(maestro, ids) → informe QA (avisos_lectura + guid-duplicado, D28) · emitir_bcf(informe, carpeta) → topics BCF 3.0 (con cámara determinista si recibe el derivado, D29). Contract-first: reproduce las golden C4-FED-01/02/03/04/05/06."
requires-python = ">=3.10"
dependencies = [
  "ifcopenshell>=0.7",
]

[project.scripts]
aqyra-federacion = "aqyra_federacion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aqyra_federacion"]
