[project]
name = "aqyra-verificacion-ec"
version = "0.1.0"
description = "Aprovechamiento EC3 (acero) — criterio normativo (anzuelo, privado, D-022). Suelo de V3; armado EC2 y pandeo de barra como incrementos. Puerto a estructuras-eurocodigos anclado."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
